added some files and folders

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,4 @@
 # MONGO = mongodb+srv://loha:loha@cluster0.whuz1vo.mongodb.net/booking?retryWrites=true&w=majority if the below doest work then use this
-MONGO = mongodb://localhost:27017/event_management
+# MONGO = mongodb://localhost:27017/event_management
+MONGO = mongodb+srv://baliramnaik408:Store12@cluster0.mmwsc4b.mongodb.net/eventsDB?retryWrites=true&w=majority&appName=Cluster0 
 JWT = abc
