--- a/client/package.json
+++ b/client/package.json
@@ -60,8 +60,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/api",
+  "proxy": "https://event-hub-apii.vercel.app/api",
   "devDependencies": {
     "@types/bootstrap": "^5.2.10"
   }
 }
+
